force-app/main/default/objects/ResidentialLoanApplication/ResidentialLoanApplication.object-meta.xml
<CustomObject>
   
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>