force-app/main/default/objects/ResidentialLoanApplication/fields/Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Status__c</fullName>
    <label>Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>