force-app/main/default/objects/ResidentialLoanApplication/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <formula>PrepayPenaltyTermMonth / IntOnlyTermMonthCount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>