force-app/main/default/objects/ResidentialLoanApplication/fields/Exception_Comment__c.field-meta.xml
<CustomField>
    <fullName>Exception_Comment__c</fullName>
    <label>Exception Comment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>