force-app/main/default/objects/ResidentialLoanApplication/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>