force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Calculate loan amount requested</description>
    <formula>Purchase_Amount__c -  Down_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>