force-app/main/default/objects/ResidentialLoanApplication/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <label>Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>