force-app/main/default/objects/ResidentialLoanApplication/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Credit Check</fullName>
            </value>
            <value>
                <fullName>Sent to Adjudicator</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>