force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Amount_Manual__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Manual__c</fullName>
    <label>Total_Amount_Manual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>