force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expenses__c</fullName>
    <description>System-calculated total of all expenses</description>
    <label>Total Monthly Expenses</label>
    <summarizedField>LoanApplicant.Monthly_Expenses__c</summarizedField>
    <summaryForeignKey>LoanApplicant.LoanApplicationId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>