force-app/main/default/objects/ResidentialLoanApplication/validationRules/Down_payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Down_payment</fullName>
    <active>true</active>
    <errorConditionFormula>Purchase_Amount__c &lt;  Down_Payment__c</errorConditionFormula>
    <errorDisplayField>Down_Payment__c</errorDisplayField>
    <errorMessage>Down payment cannot exceed purchase amount</errorMessage>
</ValidationRule>