force-app/main/default/objects/ResidentialLoanApplication/validationRules/Loan_Tenure.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Tenure</fullName>
    <active>true</active>
    <errorConditionFormula>AmortizationTerm &gt; 360</errorConditionFormula>
    <errorDisplayField>AmortizationTerm</errorDisplayField>
    <errorMessage>Loan Tenure cannot exceed 30 years</errorMessage>
</ValidationRule>