force-app/main/default/objects/ResidentialLoanApplication/validationRules/Mandatory_Exception_Comment_for_High_DTI.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Exception_Comment_for_High_DTI</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  DTI__c &gt; 0.40,
  ISPICKVAL(Stage__c, &quot;Sent to Adjudicator&quot;),
  ISBLANK(Exception_Comment__c)
)</errorConditionFormula>
    <errorDisplayField>Exception_Comment__c</errorDisplayField>
    <errorMessage>Applications with a Debt-to-Income (DTI) ratio greater than 40% require an Exception Comment before being sent to the Adjudicator</errorMessage>
</ValidationRule>