force-app/main/default/objects/ResidentialLoanApplication/listViews/High_Value_Lending_Queue_ResidentialLoanApplication.listView-meta.xml
<ListView>
    <fullName>High_Value_Lending_Queue_ResidentialLoanApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Lending Officer Queue</label>
    <queue>Lending_Officer_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>