force-app/main/default/objects/ResidentialLoanApplication/listViews/High_Value_Lending_Queue_ResidentialLoanApplication1.listView-meta.xml
<ListView>
    <fullName>High_Value_Lending_Queue_ResidentialLoanApplication1</fullName>
    <filterScope>Queue</filterScope>
    <label>High Value Lending Queue</label>
    <queue>High_Value_Lending_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>